<resources>
    <!-- Customize your app's name here. -->
    <string name="app_name">HospitalWaste</string>
    <string name="title_activity_maps">HospitalWaste - Map</string>
    <!-- -->

    <string name="gps_disabled">GPS disattivato</string>
    <string name="gps_enabled">GPS attivato</string>
    <string name="conn_failed">Connessione fallita</string>
    <string name="conn_suspended">Connessione sospesa</string>

    <string name="marker_description">Clicca per maggiori informazioni</string>
    <string name="icon_fornitori">Fornitori</string>
    <string name="icon_impostazioni">Impostazioni</string>
    <string name="icon_help">Help</string>
    <string name="icon_info">Info</string>
    <string name="icon_confronta_ulss">Confronta ULSS</string>
    <string name="menu_mapStyle_title">Stile Mappa</string>
    <string name="menu_mapStyle_summary">Scegli il tipo di mappa di Google Maps</string>
    <string name="menu_zoomThreshold_title">Soglia di Zoom</string>
    <string name="menu_zoomThreshold_summary">Soglia oltre la quale scompare il pulsante per impostare il marker</string>
    <string name="menu_checkBox_title">Aggiornamento Automatico</string>
    <string name="menu_checkBox_summary">Verifica la presenza di versioni più recenti.</string>

    <string name="menu_zoomThreshold_low">Basso</string>
    <string name="menu_zoomThreshold_mid">Medio</string>
    <string name="menu_zoomThreshold_high">Alto</string>
    <string name="menu_mapStyle_normal">Standard</string>
    <string name="menu_mapStyle_satellite">Satellite</string>
    <string name="menu_mapStyle_terrain">Terreno</string>
    <string name="menu_mapStyle_hybrid">Ibrido</string>

    <string name="credits_year">2017</string>
    <string name="credits_project">CEVID</string>
    <string name="credits_company">Università Ca\' Foscari Venezia</string>
    <string name="credits_authors">C.R.B.M.</string>

    <string name="action_info">Info</string>
    <string name="action_impostazioni">Impostazioni</string>

    <string name="msg_loading">Caricamento…</string>
    <string name="msg_button_car">Pulsante premuto</string>
    <string name="msg_permissions_not_granted">I permessi appena negati dall\'utente sono necessari per alcune funzionalità dell\'app. Il supporto delle funzionalità sarà ridotto.</string>
    <string name="marker_title">You are HERE</string>
    <string name="dati_bilancio">DATI DI BILANCIO</string>
    <string name="dati_appalti">APPALTI</string>
    <string name="incrocio_dati">INCROCIA DATI</string>
    <string name="osp_associati">OSPEDALI ASSOCIATI</string>
    <string name="search_title">Search</string>

    <string name="ospedali_associati">Ospedali Associati</string>
    <string name="ospedali_hint">hardcoded string for Ospedali Associati</string>
    <string name="appalto_hint">text box for the word Appalti</string>
    <string name="appalto_hardcoded">Appalti</string>
    <string name="incrocio_text">Incrocio Dati</string>
    <string name="voci_bilancio_hardcode">Voci di Bilancio</string>
    <string name="totale_voci_bilancio">Totale voci di Bilancio: </string>
    <string name="totale_appalti">Totale Appalti: </string>
    <string name="voci_bilancio_hint">EditText for the work Voci di Biancio</string>

    <string name="search_hint">Cerca per voce di spesa</string>
    <string name="fornitori_hardcoded">Fornitori</string>

    <string name="tab_one">2015</string>
    <string name="tab_two">2016</string>
    <string name="tab_three">2017</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="confronta_string">Sei nella Modalità Confronto</string>
    <string name="confronta_max_number">Numero massimo di ULSS da confrontare raggiunto</string>
    <string name="esci_confronta">Esci</string>
    <string name="perform_confronto">Confronta</string>
    <string name="add_to_confronto">Clicca per aggiungere ULSS a Confronto</string>
    <string name="remove_from_confronto">Rimuovi dalle ULSS da confrontare</string>
    <string name="previous_button">Indietro</string>
    <string name="next_button">Avanti</string>

</resources>
