<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group_feature"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_confronta"
            android:icon="@drawable/ic_attach_money_black"
            android:title="@string/icon_confronta_ulss" />
        <item
            android:id="@+id/drawer_fornitori"
            android:icon="@drawable/ic_work"
            android:title="@string/icon_fornitori" />
    </group>

    <group
        android:id="@+id/group_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_impostazioni"
            android:icon="@drawable/ic_settings_black"
            android:title="@string/icon_impostazioni" />
        <item
            android:id="@+id/drawer_info"
            android:icon="@drawable/ic_info_black"
            android:title="@string/icon_info" />
        <item
            android:id="@+id/drawer_help"
            android:icon="@drawable/ic_help_black"
            android:title="@string/icon_help" />
    </group>
</menu>
