<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    android:


    <Button
        android:id="@+id/mostra_bilanci"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dati_bilancio" />

    <Button
        android:id="@+id/mostra_appalti"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dati_appalti" />

    <Button
        android:id="@+id/b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/incrocio_dati" />

    <Button
        android:id="@+id/mostra_ospedali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/osp_associati" />
</LinearLayout>
